half-working version with cleanups

--- a/configure.ac
+++ b/configure.ac
@@ -340,6 +340,7 @@ AC_CONFIG_FILES([
 	client/Makefile
 	client/suse/Makefile
 	client/redhat/Makefile
+	client/dracut/Makefile
 	server/Makefile
 	nanny/Makefile
 	dhcp4/Makefile
@@ -354,4 +355,3 @@ AC_CONFIG_FILES([
 	wicked.spec
 ])
 AC_OUTPUT
-
